--- a/Hub/Blogs/Article_2_Site_Making.html
+++ b/Hub/Blogs/Article_2_Site_Making.html
@@ -132,7 +132,57 @@
                     Updated (Assignment 2)
                 </h2>
                 <p>
-
+                    With the feedback I received for my site, and especially my internet artwork, I knew that I really
+                    need to re-evaluate some aspects of my site, and maybe create more of a flow to the site. This was
+                    overall, secondary to me, and most of the changes in my site were results of pursuing my internet
+                    artwork, and this is further discussed in my <a href="./Internet Art_1_Plan.html">Internet Art
+                        Post</a>.
+                </p>
+                <p>
+                    In efforts to, after these artistic changes, really value my feedback, I tried to address the lack
+                    of flow in my site and focus on minimal changes that would still allow me to keep my one-page site.
+                    The first of which was changing my “Latest” section, to “Updated and Ongoing”, so that content would
+                    not repeat in my blog section and would create more of a spacious look to my page. It also
+                    benefitted my internet artwork and allowed for more of the links to be access and seen by the
+                    interactors of the site, while also giving a clear direction of which works on my site I would be
+                    working on continuously, and which I have deemed completed.
+                </p>
+                <p>
+                    I kept my “About” section the same and intending on treating it the same say I do my Site Making and
+                    Internet Artwork post – as living documents that are updated with each submission. These aspects of
+                    my site, unlike the content I am storing in the Blog sections are everchanging and are based on my
+                    own thoughts, feelings, and the feedback I receive with each submission. I also feel that showing
+                    these first on my site, allows it to be well contextualized in term of our assignment briefs. The
+                    reason I chose to follow up my About section after this instead of my Blog section, is because I
+                    really prefer it to be there. Although it would make sense, contextually and narratively to place it
+                    right at the end of the site, I hate how it looks. That is why I have given it its own risen bubble
+                    case, to show it’s break in flow, and that it is something that can be looked at later.
+                </p>
+                <p>
+                    In terms of what I haven’t addressed or fixed on my site, this would most likely be the Nav Bar.
+                    Both the underlining issue that I mentioned previously, I had no time to address, and now, with the
+                    removal of the “Art” section to really implement my art idea, the spacing is very off and annoying.
+                    I hope to address this swiftly by the final submission. I also want to, as I mentioned in my
+                    Internet Art post, really work on the mobile scaling of the site, particularly in terms of the
+                    piece. It’s a lot of playing around with responsive max widths and text sizes, so I am hoping that
+                    it will not be a huge issue to tackle going forward.
+                </p>
+                <p>
+                    The last thing to talk about is the implementation of React.js. In my site, I focused mainly on use
+                    of HTML and CSS because it’s what I know, and it’s what I’m good at. I have tried to follow along
+                    with Andre’s tutorials, some successful and some not so successful. However, in terms of the site I
+                    am presenting, I currently find no need to implement the React.js. Even in terms of my Internet Art,
+                    I can achieve what I want, albeit less convenient, in a way that I understand and can explain – I
+                    can’t do that with React.js yet. I am still open to the idea of implementing it and hope to maybe
+                    gain insight into how it could help me tackle some of the issues I have already presented above.
+                </p>
+                <p>
+                    Overall, minimal changes have been made to my site, but in this piece, I hope I have given more
+                    insight and clarified a lot of the previously confusing decisions I made. I also hope that the
+                    changes have given a better flow to the site, and that the issues I mentioned will be resolvable by
+                    the time I submit the final project. In terms of React.js, I think my stance on why I haven’t
+                    implemented it is clear, but moving forward, I will try to see how it can further the development of
+                    my site.
                 </p>
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
