--- a/Hub/Blogs/Article_2_Site_Making.html
+++ b/Hub/Blogs/Article_2_Site_Making.html
@@ -125,8 +125,8 @@
                     Pillay, S. (2020). vis.co - Website Design. Retrieved from vis.co:
                     https://inrahus.github.io/WSOA3029A_1827518/Hub/About/About.html
                 </p>
-                <br>
                 <br id="Pt2">
+                <br>
                 <br>
                 <h2>
                     Updated (Assignment 2)
@@ -185,7 +185,7 @@
                     my site.
                 </p>
                 <button class="viewbtn">
-                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Blogs">
+                    <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#Home">
                         Back
                     </a>
                 </button>
