--- a/Hub/Blogs/About.html
+++ b/Hub/Blogs/About.html
@@ -49,17 +49,20 @@
                 <p>
                     About 1827518.
                 </p>
+                <button class="viewbtn" href="#">
+                    <a href="#Pt2">
+                        See Updated
+                    </a>
+                </button>
+                <br>
                 <p>
-                    In my previous assignment, I believe I did adequately. I was able to approach the project quite well
+                    In my assignment, I believe I did adequately. I was able to approach the project quite well
                     from
                     a theoretical and technical standpoint but did lack a lot in terms of the long-term art project.
                     Moving forward, I thought that I could focus more on the development of my Internet Art and start
                     implementing the use of React.JS, as well as really showcasing more of my theoretical focus and
                     develop my overarching theme of decoloniality and start exploring more of what this means in terms
                     of code, development, and the tech industry.
-                </p>
-                <p>
-                    NEW
                 </p>
                 <h2>
                     Technical
@@ -127,14 +130,55 @@
                     from a gender based approach, to a more racial one that correlates more with my focus of my
                     theoretical direction.
                 </p>
-
+                <br id="Pt2">
                 <br>
                 <br>
-                <br>
-
-                <h2 id="Pt2">
+                <h2>
                     Update (Assignment 2)
                 </h2>
+                <p>
+                    In my assignment, I believe I did adequately, but with the feedback I received, I was so happy see
+                    see that i excelled overall. I was able to achieve my goal of approaching the project quite well
+                    from
+                    a theoretical standpoint but did lack a lot in terms of the long-term art project, and the technical
+                    flow of my work.
+                    Moving forward, I thought that I focused more on the development of my Internet Art, as well as
+                    continuing to showcasing more of my theoretical focus and
+                    develop my overarching theme of decoloniality and start exploring how to create a better flow to my
+                    site.
+                </p>
+                <p>
+                    In terms of marking, I still want to keep my site at an even junction with each section weighing the
+                    same.
+                </p>
+                <h2>
+                    Technical - 65%
+                </h2>
+                <p>
+                    Other than my lack of use of JS, I think that the way that I have chosen to do my Art Project (the
+                    coding) really takes way from my mark this submission. I think I have been able to really express my
+                    one-page site a lot better with the address to the flow in the creaative side. Overall, I would say
+                    it's not great, but its working, and I am happy.
+                </p>
+                <h2>
+                    Theoretical - 70%
+                </h2>
+                <p>
+                    My theoretical posts this time were not as expansive as my presious submission and i think I could
+                    really contextualise them more. Although this is my area of focus and it is something I now I can do
+                    well, I don't think these blogs were as good and I do want to address them by the next submission.
+                </p>
+                <h2>
+                    Creative - 65%
+                </h2>
+                <p>
+                    Even though the theoretical section is the main focus, I think with this submission, a lot of my
+                    focus was here. Producing my artwork, focusing on incorporating it and addressing the flow issues
+                    mentioned in feedback. All of this is what I addressed first when planning to tackle my site for
+                    this submission. Because of the delayed choosing of my artwokr and focus, I don't think the function
+                    of my piece is up to par, and looking back now, I think there much be a way to really show that the
+                    overaching theme of my site is decolonising theory.
+                </p>
 
                 <button class="viewbtn">
                     <a href="https://inrahus.github.io/WSOA4175A_1827518/index.html#GetHere">
